fix(view): :bug: corrigido erro de dependencia